<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:gravity="center"
    android:layout_margin="10dp">

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/table_header_1">
        </TextView>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/table_header_2">
        </TextView>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/table_header_3">
        </TextView>

        </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/table_row_1_col_1">
        </TextView>

        <TextView
            android:id="@+id/table_row_1_col_2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/table_row_1_col_3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/table_row_2_col_1"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/table_row_2_col_2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/table_row_2_col_3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/table_row_3_col_1">
        </TextView>

        <TextView
            android:id="@+id/table_row_3_col_2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/table_row_3_col_3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/table_row_4_col_1">
        </TextView>

        <TextView
            android:id="@+id/table_row_4_col_2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/table_row_4_col_3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/table_row_5_col_1">
        </TextView>

        <TextView
            android:id="@+id/table_row_5_col_2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/table_row_5_col_3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/table_row_6_col_1">
        </TextView>

        <TextView
            android:id="@+id/table_row_6_col_2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/table_row_6_col_3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/table_row_7_col_1">
        </TextView>

        <TextView
            android:id="@+id/table_row_7_col_2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/table_row_7_col_3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/table_row_8_col_1">
        </TextView>

        <TextView
            android:id="@+id/table_row_8_col_2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/table_row_8_col_3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/table_row_9_col_1">
        </TextView>

        <TextView
            android:id="@+id/table_row_9_col_2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/table_row_9_col_3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/table_row_10_col_1">
        </TextView>

        <TextView
            android:id="@+id/table_row_10_col_2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/table_row_10_col_3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/table_row_11_col_1">
        </TextView>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/table_row_11_col_3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textStyle="bold">
        </TextView>

    </TableRow>

</TableLayout>