<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.result.ResultFragment">

    <TableLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        style="?android:attr/layout_row">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="@string/table_header_1"
                style="?textAppearanceBody1"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="@string/table_header_2"
                style="?textAppearanceBody1">
            </TextView>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="@string/table_header_3"
                style="?textAppearanceBody1">
            </TextView>

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/button_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="0dp"
        android:background="#e6f0ef"
        android:stretchColumns="*">

        <TableRow tools:ignore="UselessParent">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:text="@string/btn_play_again"
                style="?android:attr/buttonBarPositiveButtonStyle"/>

        </TableRow>

    </TableLayout>

</RelativeLayout>